--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <body>
     <div class="wrapper">
-        <span class="text_1" >
-           CELCIUS TO FAHRENHEIT CONVERTER  
+        <span class="text_1">
+            TEMPERTURE CONVERTER
         </span>
-        <input type="text" placeholder="Enter a celcius value" class="text_box" id="txt_field">
+        <input type="text" placeholder="Enter a value" class="text_box" id="txt_field">
+        <select id="conversion">
+            <option value="ftoc">Fahrenheit to Celsius</option>
+            <option value="ctof">Celsius to Fahrenheit value</option>
+        </select>
         <button class="button" onclick="convert()">CONVERT</button>
         <div class="result" id="result">
         </div>
